--- a/2p_analysis_pipeline.ipynb
+++ b/2p_analysis_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -14,7 +14,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ag-bahl\\AppData\\Local\\Temp\\ipykernel_31244\\2470098560.py:27: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
+      "C:\\Users\\ag-bahl\\AppData\\Local\\Temp\\ipykernel_6352\\2470098560.py:27: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
       "  from IPython.core.display import display, HTML\n"
      ]
     },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "datetime = \"2022-04-12_11-23-06\""
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "with open(r'C:\\Users\\ag-bahl\\Documents\\functional_volume_characterization\\raw\\registered.txt') as f:\n",
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -6218,6 +6218,7 @@
       "<timed exec>:183: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "<timed exec>:183: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "<timed exec>:183: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "<timed exec>:183: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "<timed exec>:183: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n"
      ]
     },
@@ -6225,15 +6226,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 7min 6s\n",
-      "Wall time: 7min 9s\n"
+      "CPU times: total: 7min 12s\n",
+      "Wall time: 7min 16s\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<timed exec>:183: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "<timed exec>:183: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "<timed exec>:183: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "<timed exec>:183: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
@@ -6449,7 +6449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
@@ -6571,8 +6571,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 4.02 s\n",
-      "Wall time: 4.02 s\n"
+      "CPU times: total: 4.08 s\n",
+      "Wall time: 4.08 s\n"
      ]
     }
    ],
@@ -6806,7 +6806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "xmax = 0\n",
@@ -6840,7 +6840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "def array_writer(array,mask,value,x_off,y_off):\n",
@@ -6863,17 +6863,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.analyzer object at 0x0000019AE8D008E0>\n",
-      "<__main__.analyzer object at 0x0000019AE4AF3B20>\n",
-      "<__main__.analyzer object at 0x0000019ADEDC12B0>\n",
-      "<__main__.analyzer object at 0x0000019AE4B03730>\n",
-      "<__main__.analyzer object at 0x0000019ADE582790>\n"
+      "<__main__.analyzer object at 0x000001A043EB2FD0>\n",
+      "<__main__.analyzer object at 0x000001A043EED070>\n",
+      "<__main__.analyzer object at 0x000001A0437481F0>\n",
+      "<__main__.analyzer object at 0x000001A043EE8AF0>\n",
+      "<__main__.analyzer object at 0x000001A0478AAD90>\n"
      ]
     }
    ],
@@ -6956,7 +6956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "#just treshold selection\n",
@@ -6973,13 +6973,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
       "text/plain": "internal_exp_no\n0    20\n1    20\n3    20\ndtype: int64"
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7020,13 +7020,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
       "text/plain": "internal_exp_no\n0    31\n1    52\n3    17\ndtype: int64"
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7053,7 +7053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "# enter prefered version of selection of cells df (selected_cells, selected_cells_per_iep, selected_cells_100)\n",
@@ -7068,7 +7068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "selected_cells_contra = []\n",
@@ -7092,7 +7092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "cells[\"response_stim0\"]=\"a\"\n",
@@ -7117,13 +7117,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ag-bahl\\AppData\\Local\\Temp\\ipykernel_31244\\2354832181.py:1: PerformanceWarning: \n",
+      "C:\\Users\\ag-bahl\\AppData\\Local\\Temp\\ipykernel_6352\\2630174911.py:1: PerformanceWarning: \n",
       "your performance may suffer as PyTables will pickle object types that it cannot\n",
       "map directly to c-types [inferred_type->mixed-integer,key->block2_values] [items->Index(['cell_no', 'z', 'std_intra/std_extra_stim0',\n",
       "       'std_intra/std_extra_stim1', 'normalized_stim0', 'normalized_stim1',\n",
