--- a/2p_analysis_pipeline.ipynb
+++ b/2p_analysis_pipeline.ipynb
@@ -70,7 +70,8 @@
     "import numpy as np\n",
     "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
     "import matplotlib as mpl\n",
-    "import tables\n"
+    "import tables\n",
+    "from tqdm import tqdm"
    ]
   },
   {
